installed tailwind & added sign up & log in components

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,6 +15,12 @@
     <button mat-menu-item>
       <p [routerLink]="['/profile']">Profile</p>
     </button>
+    <button mat-menu-item>
+      <p [routerLink]="['/sign-up']">Sign up</p>
+    </button>
+    <button mat-menu-item>
+      <p [routerLink]="['/log-in']">Log in</p>
+    </button>
   </mat-menu>
 </header>
 
@@ -23,5 +29,10 @@
   <div>
     <p [routerLink]="['/home']">Home</p>
     <p [routerLink]="['/profile']">Profile</p>
+  </div>
+
+  <div>
+    <p [routerLink]="['/sign-up']">Sign up</p>
+    <p [routerLink]="['/log-in']">Log in</p>
   </div>
 </section>
