--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
-* {
+@import "tailwindcss";
+
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -17,4 +19,4 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-}
+} */
