--- a/src/app/auth/features/auth-signup/auth-signup.component.html
+++ b/src/app/auth/features/auth-signup/auth-signup.component.html
@@ -43,7 +43,7 @@
               required=""
             />
           </div>
-          <div>
+          <!-- <div>
             <label
               for="confirm-password"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
@@ -57,7 +57,7 @@
               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-600 focus:border-green-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               required=""
             />
-          </div>
+          </div> -->
           <div class="flex items-start">
             <div class="flex items-center h-5">
               <input
@@ -92,7 +92,8 @@
             <a
               href="#"
               class="font-medium text-green-600 hover:underline dark:text-green-500"
-              >Login here</a
+              [routerLink]="['/log-in']"
+              >Log in here</a
             >
           </p>
         </form>
