--- a/src/app/auth/features/auth-signup/auth-signup.component.html
+++ b/src/app/auth/features/auth-signup/auth-signup.component.html
@@ -12,7 +12,11 @@
         >
           Create an account
         </h1>
-        <form class="space-y-4 md:space-y-6" action="#">
+        <form
+          class="space-y-4 md:space-y-6"
+          [formGroup]="form"
+          (ngSubmit)="submit()"
+        >
           <div>
             <label
               for="email"
@@ -20,6 +24,7 @@
               >Your email</label
             >
             <input
+              formControlName="email"
               type="email"
               name="email"
               id="email"
@@ -35,6 +40,7 @@
               >Password</label
             >
             <input
+              formControlName="password"
               type="password"
               name="password"
               id="password"
