implemented logOut button on navbar

--- a/src/app/auth/features/auth-signup/auth-signup.component.html
+++ b/src/app/auth/features/auth-signup/auth-signup.component.html
@@ -99,7 +99,7 @@
               href="#"
               class="font-medium text-green-600 hover:underline dark:text-green-500"
               [routerLink]="['/log-in']"
-              >Log in here</a
+              >Log in</a
             >
           </p>
         </form>
