--- a/src/app/auth/features/auth-login/auth-login.component.html
+++ b/src/app/auth/features/auth-login/auth-login.component.html
@@ -12,7 +12,11 @@
         >
           Log in
         </h1>
-        <form class="space-y-4 md:space-y-6" action="#">
+        <form
+          class="space-y-4 md:space-y-6"
+          [formGroup]="form"
+          (ngSubmit)="submit()"
+        >
           <div>
             <label
               for="email"
@@ -20,6 +24,7 @@
               >Your email</label
             >
             <input
+              formControlName="email"
               type="email"
               name="email"
               id="email"
@@ -35,6 +40,7 @@
               >Password</label
             >
             <input
+              formControlName="password"
               type="password"
               name="password"
               id="password"
@@ -85,7 +91,7 @@
             type="submit"
             class="w-full text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
           >
-            Create an account
+            Log in
           </button>
           <p class="text-sm font-light text-gray-500 dark:text-gray-400">
             Don't have an account?
