implementing getAlltrips() logs on console ok

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,11 +1,7 @@
 <div class="cards-layout">
   @for (trip of trips; track trip.name){
-  <div
-    class="card"
-    [ngStyle]="{
-      'background-image': getBackgroungImageStyle(trip.backgroundImageUrl)
-    }"
-  >
+  <div class="card">
+    <!-- [ngStyle]="{'background-image': getBackgroungImageStyle(trip.backgroundImageUrl)    }" -->
     >
     <button
       class="crud-button"
