--- a/src/app/components/card-form/card-form.component.html
+++ b/src/app/components/card-form/card-form.component.html
@@ -51,6 +51,6 @@
     class="w-full text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
     (click)="newTrip()"
   >
-    Add trip
+    {{ tripsService.tripSelected ? "Save changes" : "Add trip" }}
   </button>
 </form>
