--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -15,7 +15,7 @@
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item>
+      <button mat-menu-item (click)="editTrip(trip)">
         <span>Edit</span>
       </button>
       <button mat-menu-item>
