implemented editTrip & updateTrip fucnctions

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -18,7 +18,7 @@
       <button mat-menu-item (click)="editTrip(trip)">
         <span>Edit</span>
       </button>
-      <button mat-menu-item>
+      <button mat-menu-item (click)="deleteTrip(trip)">
         <span>Delete</span>
       </button>
     </mat-menu>
