added highlights & star&end date to the crud

--- a/src/app/features/card-form/card-form.component.css
+++ b/src/app/features/card-form/card-form.component.css
@@ -5,9 +5,13 @@ h2 {
 
 @media (min-width: 600px) {
   h2 {
-    margin: 3rem 0rem;
+    margin: 1rem 0rem;
     align-self: center;
     justify-self: center;
-    font-size: 3rem;
+    font-size: 2rem;
+  }
+
+  section {
+    max-width: 90vw;
   }
 }
