--- a/src/app/features/card/card.component.html
+++ b/src/app/features/card/card.component.html
@@ -24,7 +24,7 @@
     </mat-menu>
     <div class="card-info">
       <h1>{{ trip.name }}</h1>
-      <p>{{ trip.date }}</p>
+      <p>{{ trip.startDate }}</p>
     </div>
   </div>
 
