--- a/src/app/features/card/card.component.css
+++ b/src/app/features/card/card.component.css
@@ -1,5 +1,5 @@
 .card {
-  min-height: 200px;
+  min-height: 250px;
   margin: 2rem;
   border-radius: 2rem;
   justify-content: flex-end;
@@ -11,14 +11,19 @@
   position: relative;
 }
 
-.card-info {
-  margin: 2.5rem;
-}
+.layer {
+  width: 100%;
+  height: 100%;
+  border-radius: 2rem;
 
-h1 {
-  font-size: xx-large;
-  color: white;
-  text-shadow: 5px 5px 5px black;
+  background: rgba(52, 52, 53, 0.233);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.card-info {
+  margin: 1.5rem;
+  z-index: 2;
 }
 
 p {
@@ -26,20 +31,8 @@ p {
   color: white;
 }
 
-.crud-button {
-  position: absolute;
-  top: 1rem;
-  right: 0.5rem;
-  align-self: unset;
-  justify-self: unset;
-  z-index: 2;
-  border: none;
-  background-color: transparent;
-  color: white;
-
-  &:hover {
-    cursor: pointer;
-  }
+#crud-buttons {
+  display: none;
 }
 
 @media (min-width: 600px) {
@@ -56,9 +49,24 @@ p {
     font-size: x-large;
   }
   .card {
-    height: 250px;
     width: 17%;
     min-width: 300px;
     margin: 0;
+  }
+
+  #crud-buttons {
+    display: inherit;
+    position: absolute;
+    top: 1rem;
+    right: 0.8rem;
+    align-self: unset;
+    justify-self: unset;
+    z-index: 2;
+    border: none;
+    background-color: transparent;
+    color: white;
+  }
+  #crud-buttons:hover {
+    cursor: pointer;
   }
 }
