--- a/src/app/features/card/card.component.css
+++ b/src/app/features/card/card.component.css
@@ -30,9 +30,21 @@ p {
   font-size: large;
   color: white;
 }
-
 #crud-buttons {
-  display: none;
+  display: inherit;
+  position: absolute;
+  top: 1rem;
+  right: 0.8rem;
+  align-self: unset;
+  justify-self: unset;
+  z-index: 2;
+  border: none;
+  background-color: transparent;
+  color: white;
+  filter: drop-shadow(1px 1px 6px #000000);
+}
+#crud-buttons:hover {
+  cursor: pointer;
 }
 
 @media (min-width: 600px) {
@@ -52,21 +64,5 @@ p {
     width: 17%;
     min-width: 300px;
     margin: 0;
-  }
-
-  #crud-buttons {
-    display: inherit;
-    position: absolute;
-    top: 1rem;
-    right: 0.8rem;
-    align-self: unset;
-    justify-self: unset;
-    z-index: 2;
-    border: none;
-    background-color: transparent;
-    color: white;
-  }
-  #crud-buttons:hover {
-    cursor: pointer;
   }
 }
