--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -9,20 +9,27 @@
     <mat-icon>menu</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
+    @if (userEmail) {
+
+    <button mat-menu-item disabled>
+      <span>Hi, {{ userEmail }}</span>
+    </button>
+    <button mat-menu-item (click)="logOut()">
+      <span>Log out</span>
+    </button>
+    } @else {
     <button mat-menu-item>
-      <p [routerLink]="['/home']">Home</p>
+      <span [routerLink]="['/sign-up']">Sign up</span>
     </button>
     <button mat-menu-item>
-      <p [routerLink]="['/profile']">Profile</p>
+      <span [routerLink]="['/log-in']">Log in</span>
+    </button>
+    }
+    <button mat-menu-item>
+      <span [routerLink]="['/home']">Home</span>
     </button>
     <button mat-menu-item>
-      <p [routerLink]="['/sign-up']">Sign up</p>
-    </button>
-    <button mat-menu-item>
-      <p [routerLink]="['/log-in']">Log in</p>
-    </button>
-    <button mat-menu-item>
-      <p (click)="logOut()">Log out</p>
+      <span [routerLink]="['/profile']">Profile</span>
     </button>
   </mat-menu>
 </header>
@@ -33,10 +40,15 @@
     <p [routerLink]="['/home']">Home</p>
     <p [routerLink]="['/profile']">Profile</p>
   </div>
-
+  @if (userEmail) {
+  <div>
+    <span class="mr-4">Hi, {{ userEmail }}</span>
+    <button (click)="logOut()" class="ml-2">Log out</button>
+  </div>
+  } @else {
   <div>
     <p [routerLink]="['/sign-up']">Sign up</p>
     <p [routerLink]="['/log-in']">Log in</p>
-    <p (click)="logOut()">Log out</p>
   </div>
+  }
 </section>
