--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -9,3 +9,12 @@
     Add trip
   </button>
 </div>
+<br />
+<br />
+<app-map></app-map>
+
+<h6>
+  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, magni
+  accusamus consectetur vitae assumenda est officia libero totam odit. Aut,
+  repellat magni ducimus cumque dolores mollitia rerum perferendis modi quae.
+</h6>
