feat: draft home

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,1 +1,8 @@
-<app-navbar></app-navbar> Home works!
+<app-navbar></app-navbar>
+<section>
+  <div class="layer"></div>
+  <div class="home-info">
+    <h2>Travel Journal</h2>
+    <button [routerLink]="['/profile']">Start</button>
+  </div>
+</section>
