feat: home second draft home and footer

--- a/src/app/features/card-form/card-form.component.html
+++ b/src/app/features/card-form/card-form.component.html
@@ -7,7 +7,7 @@
       <label
         for="name"
         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-        >Name</label
+        >Country</label
       >
       <input
         formControlName="name"
