feat: fetch cpountri api and updated the select option in the card form

--- a/src/app/features/card-form/card-form.component.html
+++ b/src/app/features/card-form/card-form.component.html
@@ -9,13 +9,18 @@
         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
         >Country</label
       >
-      <input
+      <select
         formControlName="name"
-        type="name"
         id="name"
         class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light"
         required
-      />
+      >
+        <option value="" disabled selected>Select a country</option>
+        @for(country of countries; track country){
+        <option [value]="country">{{ country }}</option>
+
+        }
+      </select>
     </div>
     <div class="flex gap-1 items-center">
       <label
