feat: cards: added an addTrip blank card

--- a/src/app/features/card-form/card-form.component.html
+++ b/src/app/features/card-form/card-form.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 
 <section>
-  <h2>Trip information</h2>
+  <h2 class="text-3xl text-center">Trip information</h2>
   <form class="max-w-sm mx-auto" [formGroup]="form">
     <div class="mb-5">
       <label
@@ -67,7 +67,7 @@
     </div>
 
     <!--Highlights  -->
-    <h2>Highlights</h2>
+    <h2 class="text-3xl text-center">Highlights</h2>
     <div class="mb-5">
       <label
         for="food"
