--- a/src/app/features/card/card.component.html
+++ b/src/app/features/card/card.component.html
@@ -1,4 +1,25 @@
 <div class="cards-layout">
+  <!-- //add trip card -->
+
+  <div class="card" id="addTripCard">
+    <h1 class="text-3xl">Add trip!</h1>
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      fill="bg-gray-100"
+      viewBox="0 0 24 24"
+      stroke-width="0.7"
+      stroke="currentColor"
+      class="size-16 text-white"
+      [routerLink]="['/card-form']"
+      style="cursor: pointer"
+    >
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+      />
+    </svg>
+  </div>
   @for (trip of tripsService.tripCards(); track trip.name){
 
   <div
