--- a/src/app/features/card/card.component.css
+++ b/src/app/features/card/card.component.css
@@ -11,6 +11,17 @@
   position: relative;
 }
 
+#addTripCard {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(240, 243, 245);
+}
+
+svg:hover {
+  transform: scale(1.05);
+}
+
 .layer {
   width: 100%;
   height: 100%;
