feat: map: fetchGeocodes(), get coordinates from db countries

--- a/src/app/features/card/card.component.html
+++ b/src/app/features/card/card.component.html
@@ -20,6 +20,8 @@
       />
     </svg>
   </div>
+
+  <!-- trip cards from db -->
   @for (trip of tripsService.tripCards(); track trip.name){
 
   <div
