feat: trip: updated styling

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -59,7 +59,7 @@
 </header>
 <!-- end header -->
 <!-- Section -->
-<section class="bg-white dark:bg-gray-900">
+<section class="bg-white dark:bg-gray-900 mb-6">
   <div
     class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6"
   >
@@ -83,12 +83,12 @@
       <img
         class="w-full rounded-lg"
         src="https://images.pexels.com/photos/1080421/pexels-photo-1080421.jpeg"
-        alt="office content 1"
+        alt="trvel1"
       />
       <img
         class="mt-4 w-full lg:mt-10 rounded-lg"
         src="https://images.pexels.com/photos/30958660/pexels-photo-30958660.jpeg"
-        alt="office content 2"
+        alt="travel2"
       />
     </div>
   </div>
@@ -99,7 +99,7 @@
   Features
 -->
 <section class="bg-gray-100" id="features">
-  <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
+  <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6 mt-4">
     <div
       class="space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0"
     >
@@ -109,7 +109,7 @@
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            fill="none"
+            fill="bg-black"
             viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
