--- a/src/app/features/trip/trip.component.html
+++ b/src/app/features/trip/trip.component.html
@@ -6,7 +6,7 @@
   [ngStyle]="{ 'background-image': 'url(' + trip.backgroundImg + ')' }"
 >
   <h1
-    class="text-5xl md:text-5xl font-bold text-white drop-shadow-[0_2px_4px_rgba(0,0,0,0.9)] m-8"
+    class="text-5xl md:text-5xl font-bold text-white drop-shadow-[0_2px_4px_rgba(0,0,0,0.9)] m-15"
   >
     {{ trip.name }}
   </h1>
@@ -45,33 +45,36 @@
 </div>
 
 <!-- Highlights-->
-<div class="max-w-2xl mx-auto mt-8 p-6 rounded-lg shadow-lg bg-white">
+<div
+  class="w-full max-w-2xl lg:max-w-4xl mx-auto mt-8 p-6 rounded-lg shadow-lg bg-white"
+>
   <p class="text-gray-600 mb-4 flex gap-1 items-center gap-3">
     <span class="font-semibold">Start date:</span> {{ trip.startDate }}<br />
     <span class="text-gray-400">|</span>
     <span class="font-semibold">End date:</span> {{ trip.endDate }}
   </p>
   <div class="mb-4">
-    <span class="font-semibold">Food:</span>
-    <div>
+    <p class="font-bold text-xl text-gray-600 my-3" id="title">Highlights</p>
+    <span class="font-semibold text-lg">Food:</span>
+    <div class="font-light my-2">
       {{ trip.food }}
     </div>
   </div>
   <div class="mb-4">
-    <span class="font-semibold">View:</span>
-    <div>
+    <span class="font-semibold text-lg">View:</span>
+    <div class="font-light">
       {{ trip.view }}
     </div>
   </div>
   <div class="mb-4">
-    <span class="font-semibold">Nature:</span>
-    <div>
+    <span class="font-semibold text-lg">Nature:</span>
+    <div class="font-light">
       {{ trip.nature }}
     </div>
   </div>
   <div class="mb-4">
-    <span class="font-semibold">Highlights:</span>
-    <div>
+    <span class="font-semibold text-lg">Random:</span>
+    <div class="font-light">
       {{ trip.random }}
     </div>
   </div>
