--- a/src/app/features/trip/trip.component.html
+++ b/src/app/features/trip/trip.component.html
@@ -5,6 +5,28 @@
   class="w-full min-h-screen bg-cover bg-center relative flex items-end"
   [ngStyle]="{ 'background-image': 'url(' + trip.backgroundImg + ')' }"
 >
+  <div class="absolute top-4 left-4 z-20">
+    <button
+      (click)="goToProfile()"
+      class="hover:bg-black text-white rounded-full p-2 shadow-lg transition"
+      title="Back to profile"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="2"
+        stroke="currentColor"
+        class="w-6 h-6"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M15.75 19.5L8.25 12l7.5-7.5"
+        />
+      </svg>
+    </button>
+  </div>
   <h1
     class="text-5xl md:text-5xl font-bold text-white drop-shadow-[0_2px_4px_rgba(0,0,0,0.9)] m-15"
   >
