--- a/src/app/features/trip/trip.component.html
+++ b/src/app/features/trip/trip.component.html
@@ -101,6 +101,8 @@
     </div>
   </div>
 </div>
+<!-- ratings -->
+<app-ratings [country]="trip.name"></app-ratings>
 }
 <ng-template #loadingOrNotFound>
   <div class="text-center mt-10 text-gray-500">
