--- a/src/app/features/trip/trip.component.html
+++ b/src/app/features/trip/trip.component.html
@@ -102,7 +102,7 @@
   </div>
 </div>
 <!-- ratings -->
-<app-ratings [country]="trip.name"></app-ratings>
+<app-ratings [country]="trip.name" [tripId]="trip.id"></app-ratings>
 }
 <ng-template #loadingOrNotFound>
   <div class="text-center mt-10 text-gray-500">
