feat: ratings: added styling and snackBar

--- a/src/app/features/ratings/ratings.component.html
+++ b/src/app/features/ratings/ratings.component.html
@@ -1,24 +1,35 @@
-@if (!loading) { @for (cat of getCategoryKeys(); track cat) {
-<div class="mb-2">
-  <span class="font-semibold">{{ cat }}</span>
-  @for (star of [1, 2, 3, 4, 5]; track star) {
-  <span
-    (click)="setLocalRating(cat, star)"
-    [class.text-yellow-400]="ratings[cat] >= star"
-    class="cursor-pointer text-2xl"
-    >★</span
-  >
+<div
+  class="w-full max-w-2xl lg:max-w-4xl mx-auto mt-8 p-6 rounded-lg shadow-lg bg-white"
+>
+  <h2 class="text-2xl font-bold mb-3 text-gray-600">Ratings</h2>
+  @if (!loading) { @for (cat of getCategoryKeys(); track cat) {
+  <div class="mb-2 flex justify-center items-center w-full">
+    <span class="font-semibold text-xl mr-4 min-w-24 text-center">{{
+      cat | titlecase
+    }}</span>
+    <div class="flex gap-2">
+      @for (star of [1, 2, 3, 4, 5]; track star) {
+      <span
+        (click)="setLocalRating(cat, star)"
+        [class.text-green-600]="ratings[cat] >= star"
+        class="cursor-pointer text-3xl"
+        >★</span
+      >
+      }
+    </div>
+  </div>
+  }
+  <div class="flex justify-center">
+    <button
+      class="mt-4 px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700 transition"
+      (click)="submitRatings()"
+    >
+      Rate!
+    </button>
+  </div>
+  @if (error) {
+  <div class="text-red-500 mt-2">{{ error }}</div>
+  } } @else {
+  <div class="text-gray-500">Loading ratings...</div>
   }
 </div>
-}
-<button
-  class="mt-4 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition"
-  (click)="submitRatings()"
->
-  Submit Ratings
-</button>
-@if (error) {
-<div class="text-red-500 mt-2">{{ error }}</div>
-} } @else {
-<div class="text-gray-500">Loading ratings...</div>
-}
