--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -14,6 +14,9 @@
     <button mat-menu-item disabled>
       <span>Hi, {{ userEmail }}</span>
     </button>
+    <button mat-menu-item>
+      <span [routerLink]="['/insights']">Insights</span>
+    </button>
     <button mat-menu-item (click)="logOut()">
       <span>Log out</span>
     </button>
@@ -43,6 +46,8 @@
   @if (userEmail) {
   <div>
     <span class="mr-4">Hi, {{ userEmail }}</span>
+    <p [routerLink]="['/insights']">Insights</p>
+
     <button (click)="logOut()" class="ml-2">Log out</button>
   </div>
   } @else {
