--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -177,23 +177,4 @@
   </div>
 </section>
 <!-- footer -->
-<footer class="p-4 bg-black md:p-8 lg:p-6 dark:bg-gray-800">
-  <div class="mx-auto max-w-screen-xl text-center">
-    <ul
-      class="flex flex-wrap justify-center items-center mb-1 text-white dark:text-white"
-    >
-      <li>
-        <a href="#" class="mr-4 hover:underline md:mr-6">About</a>
-      </li>
-      <li>
-        <a href="#" class="mr-4 hover:underline md:mr-6">FAQs</a>
-      </li>
-      <li>
-        <a href="#" class="mr-4 hover:underline md:mr-6">Contact</a>
-      </li>
-    </ul>
-    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
-      >© Copyright 2025. All Rights Reserved.</span
-    >
-  </div>
-</footer>
+<app-footer></app-footer>
