--- a/src/app/features/navbar/navbar.component.css
+++ b/src/app/features/navbar/navbar.component.css
@@ -53,10 +53,14 @@
     gap: 2rem;
     margin: 0rem 2rem;
   }
-  p {
+  p,
+  span,
+  button {
     cursor: pointer;
+    font-size: small;
+    font-weight: 400;
     &:hover {
-      transform: scale(1.2);
+      transform: scale(1.1);
     }
   }
 }
