--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -40,12 +40,13 @@
 <!-- Desktop menu -->
 <section class="desktop-navbar">
   <div>
-    <p [routerLink]="['/home']">Home</p>
+    <p [routerLink]="['/home']" class="">Home</p>
     <p [routerLink]="['/profile']">Profile</p>
   </div>
   @if (userEmail) {
   <div>
     <span class="mr-4">Hi, {{ userEmail }}</span>
+    <span>|</span>
     <p [routerLink]="['/insights']">Insights</p>
 
     <button (click)="logOut()" class="ml-2">Log out</button>
