--- a/src/app/features/profile/profile.component.css
+++ b/src/app/features/profile/profile.component.css
@@ -1,18 +1,9 @@
-h2 {
-  margin-left: 2.5rem;
-  margin-top: 0.5rem;
-  font-size: xx-large;
-}
-
 section {
   position: relative;
 }
 
 @media (min-width: 600px) {
-  h2 {
-    margin: 3rem 0rem;
-    align-self: center;
-    justify-self: center;
-    font-size: 3rem;
-  }
+  /* p {
+    font-size: large;
+  } */
 }
