--- a/src/app/features/trips/components/card/card.component.html
+++ b/src/app/features/trips/components/card/card.component.html
@@ -1,7 +1,7 @@
 <div class="cards-layout">
   <!-- //add trip card -->
 
-  <div class="card" id="addTripCard">
+  <div [routerLink]="['/card-form']" class="card" id="addTripCard">
     <h1 class="text-3xl">Add trip!</h1>
     <svg
       xmlns="http://www.w3.org/2000/svg"
