--- a/src/app/core/views/layout/layout.component.css
+++ b/src/app/core/views/layout/layout.component.css
@@ -1,3 +1,21 @@
-main {
+.layout-flex {
+  min-height: 100vh;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+app-navbar {
+  flex-shrink: 0;
+}
+
+.layout-content {
+  flex: 1 0 auto;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+app-footer {
+  flex-shrink: 0;
 }
