--- a/src/app/core/views/layout/layout.component.html
+++ b/src/app/core/views/layout/layout.component.html
@@ -1,6 +1,7 @@
-<main>
+<div class="layout-flex">
   <app-navbar></app-navbar>
-  <router-outlet></router-outlet>
-
+  <div class="layout-content">
+    <router-outlet></router-outlet>
+  </div>
   <app-footer></app-footer>
-</main>
+</div>
